argocd/media/arr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arr-stack
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arr
  template:
    metadata:
      labels:
        app: arr
    spec:
      containers:
      - name: prowlarr
        image: lscr.io/linuxserver/prowlarr
        volumeMounts:
        - name: prowlarr-config
          mountPath: /config
        ports:
        - containerPort: 9696

      - name: lidarr
        image: lscr.io/linuxserver/lidarr
        volumeMounts:
        - name: lidarr-config
          mountPath: /config
        - name: media
          mountPath: /media
        - name: downloads
          mountPath: /downloads
        ports:
        - containerPort: 8686

      - name: radarr
        image: lscr.io/linuxserver/radarr
        volumeMounts:
        - name: radarr-config
          mountPath: /config
        - name: media
          mountPath: /media
        - name: downloads
          mountPath: /downloads
        ports:
        - containerPort: 7878

      - name: sonarr
        image: lscr.io/linuxserver/sonarr
        volumeMounts:
        - name: sonarr-config
          mountPath: /config
        - name: media
          mountPath: /media
        - name: downloads
          mountPath: /downloads
        ports:
        - containerPort: 8989

      - name: gluetun
        image: ghcr.io/qdm12/gluetun:v3.40.0
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
        volumeMounts:
          - name: tun
            mountPath: /dev/net/tun
          - name: mullvad-config-secret
            mountPath: "/gluetun/wireguard"

      - name: flaresolverr
        image: flaresolverr/flaresolverr:latest
      - name: soularr
        image: mrusse08/soularr:latest
        volumeMounts:
        - name: soularr-config
          mountPath: /soularr
        - name: downloads
          mountPath: /downloads
          
      volumes:
      - name: prowlarr-config
        persistentVolumeClaim:
          claimName: prowlarr-config
      - name: lidarr-config
        persistentVolumeClaim:
          claimName: lidarr-config
      - name: radarr-config
        persistentVolumeClaim:
          claimName: radarr-config
      - name: sonarr-config
        persistentVolumeClaim:
          claimName: sonarr-config
      - name: media
        persistentVolumeClaim:
          claimName: nfs-media
      - name: downloads
        persistentVolumeClaim:
          claimName: nfs-downloads
      - name: nfs-auth
        secret:
          secretName: nfs-auth
      - name: arr-token-secret
        secret:
          secretName: arr-token-secret
      - name: mullvad-config-secret
        secret:
          secretName: mullvad-config-secret
      - name: soularr-config
        secret:
          secretName: soularr-configmap
      - name: tun
        hostPath:
          path: /dev/net/tun
