argocd/media/arr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9696
  selector:
    app: arr
---
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: media
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8686
  selector:
    app: arr
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 7878
  selector:
    app: arr
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8989
  selector:
    app: arr
